# PlanckConv

./: .gitignore  README.md  example_notebook.ipynb  example_notebook.py  main.py  pyproject.toml
PlanckConv/: __init__.py  classes.py  core_functions.py  external.py  external_qp_planck.py
inputs/gaussian_elliptical_beams/: blm_100-1a.fits  blm_100-1b.fits  blm_100-2a.fits  blm_100-2b.fits  blm_100-3a.fits  blm_100-3b.fits  blm_100-4a.fits  blm_100-4b.fits
inputs/polmoments_ns0128/: polmoments_100-1a_hits.fits  polmoments_100-2b_hits.fits  polmoments_100-3b_hits.fits  polmoments_100-4b_hits.fits
