[project]
name = "planckconv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.14",
    "nbformat>=5.10.4",
    "pixell>=0.31.10",
    "ruff>=0.15.21",
    "smarties",
]

[tool.uv.sources]
smarties = { path = "../litebird_thingy/smarties", editable = true }
