[project]
name = "PlanckConv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.6.1",
    "pixell>=0.31.10",
    "ruff>=0.15.21",
    "smarties",
]

[tool.uv.sources]
smarties = { git = "https://github.com/camilledemay/smarties-beam-convolution" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
